tests/neg/i3630.scala
class U { Array(Array(2), Array("a")) } // error: no classtag
